<resources>
    <string name="app_name">NetflixInterface</string>
    <string name="videoName">La Casa de Papel</string>
    <string name="seasonEpisode">S1:E2</string>
    <string name="volumeButton">Volume menu</string>
    <string name="commentButton">Comment menu</string>
    <string name="favoriteButton">Favorite this video</string>
    <string name="copyButton">Copy this?</string>
    <string name="restartButton">Restart video</string>
    <string name="playButton">Play Video</string>
    <string name="pauseButton">Pause video</string>
    <string name="videoImage">Video streaming</string>
    <string name="time">00:00</string>
    <string name="timeFinal">43:53</string>
</resources>
